/*
 * Copyright (c) 2017-2020 DarkCompet. All rights reserved.
 */

apply plugin: 'com.android.library'

android {
	compileSdkVersion 29
	buildToolsVersion "29.0.3"

	defaultConfig {
		minSdkVersion 14
		targetSdkVersion 29
		versionCode 1
		versionName "1.0"

		testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"

	}

	buildTypes {
		release {
			minifyEnabled false
			proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
		}
	}

	compileOptions {
		sourceCompatibility JavaVersion.VERSION_1_8
		targetCompatibility JavaVersion.VERSION_1_8
	}

	sourceSets {
		main {
			//res.srcDirs += '../../../../library/android/library_android/darkcompet/src/main/res/'
		}
	}
}

dependencies {
	implementation fileTree(dir: 'libs', include: ['*.jar'])

	testImplementation 'junit:junit:4.13.2'
	androidTestImplementation 'androidx.test:runner:1.3.0'
	androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'

	api project(path: ':core')

	api 'androidx.preference:preference:1.1.1' // app style, preference setting
	api 'androidx.lifecycle:lifecycle-extensions:2.2.0' // view model
	api 'com.google.android.material:material:1.3.0' // material design
}
